--- a/googlehomepage.html
+++ b/googlehomepage.html
@@ -21,7 +21,7 @@
 	<div class="top-right">
 		<form>
 		<tr>
-			<td><img class="image"src="C:\Hridya Root Folder\html\vw van.jpg"></td>
+			<td><img class="image"src="vw van.jpg"></td>
 		</tr>
 		</form>
 	</div>
