--- a/googlehomepage.html
+++ b/googlehomepage.html
@@ -34,17 +34,17 @@
 		</form>
 	</div>
 	<div class="below-searchbar1">
-		<img class="icon" src="C:\Hridya Root Folder\html\mail image.png">
+		<img class="icon" src="mail image.png">
 	</div>
 	<div class="below-searchbar2">
-		<img class="icon" src="C:\Hridya Root Folder\html\youtube.png">
+		<img class="icon" src="youtube.png">
 	</div>
 		<div class="below-searchbar3">
-		<img class="icon" src="C:\Hridya Root Folder\html\classroom.png">
+		<img class="icon" src="classroom.png">
 	</div>
 	</div>
 		<div class="below-searchbar4">
-		<img class="icon" src="C:\Hridya Root Folder\html\ggogle+.png">
+		<img class="icon" src="ggogle+.png">
 	</div>
 	
 </body>
