--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="main-body">
 			<div class="left-section">
 				<p class="para">Facebook helps you connect and share with the <br>people in your life</p>
-				<img class="image"src="C:\Hridya Root Folder\html\facebook-login-page.png">
+				<img class="image"src="facebook-login-page.png">
 			</div>
 			<div class="right-section">
 				<h1>Create an account</h1>
